--- a/front_end/package.json
+++ b/front_end/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@ethersproject/contracts": "^5.5.0",
+    "@ethersproject/units": "^5.5.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/material": "^5.2.8",
     "@mui/styled-engine-sc": "^5.1.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -16,6 +19,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@usedapp/core": "^0.8.0",
+    "ethers": "^5.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
