--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -1,5 +1,5 @@
 dependencies:
-  - Openzeppelin/openzeppelin-contracts@4.2.0
+  - OpenZeppelin/openzeppelin-contracts@4.2.0
   - smartcontractkit/chainlink-brownie-contracts@0.2.1
 compiler:
   solc:
@@ -18,3 +18,5 @@ networks:
     fau_token: "0xFab46E002BbF0b4509813474841E0716E6730136"
     dai_usd_price_feed: "0x777A68032a88E5A84678A77Af2CD65A7b3c0775a"
     eth_usd_price_feed: "0x9326BFA02ADD2366b30bacB125260Af641031331"
+wallets:
+  from_key: ${PRIVATE_KEY}
